--- a/electron_buildsize/index.html
+++ b/electron_buildsize/index.html
@@ -12,12 +12,13 @@
       content="default-src 'self'; script-src 'self'"
     />
     <title>Hello World!</title>
-    <script src="./renderer.js"></script>
+    <script src="./js/renderer.js"></script>
   </head>
   <body>
     <h1>Hello World!</h1>
     We are using Node.js <span id="node-version"></span>, Chromium
     <span id="chrome-version"></span>, and Electron
     <span id="electron-version"></span>.
+    <button text="button" class="btn" />
   </body>
 </html>
